Fixing issue: Horizontal scroll is not fully visible.

--- a/src/core/styles/components/grid/_grid-component.scss
+++ b/src/core/styles/components/grid/_grid-component.scss
@@ -9,7 +9,7 @@
         @extend %grid-thead !optional;
 
         igx-display-container {
-            overflow: visible;
+            overflow: hidden;
         }
     }
 
